[tool.poetry]
name = "torch-persistent-homology"
version = "0.1.0"
description = ""
authors = []
build = 'build.py'

[tool.poetry.dependencies]
python = ">3.7,<3.9"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
